fix(*): fix safe-area on iphoneX

--- a/app/share/promptOrientation/promptOrientation.scss
+++ b/app/share/promptOrientation/promptOrientation.scss
@@ -7,7 +7,7 @@ $lockOrientation: portrait;
 
 .wrapper {
   @extend %fullContainer;
-  z-index: 9999;
+  z-index: 999;
   display: flex;
   flex-direction: column;
   @include flex-box-align(center, center);
